<resources>
    <string name="app_name">cardTry</string>
    <string name="out_of_lives">You are out of lives</string>
    <string name="try_again">Try again</string>
    <string name="home_page">Home</string>
    <string name="play_Again">Play again</string>
    <string name="well_done">Well done!</string>
    <string name="out_of_time">You are out of time</string>
    <string name="buy_time">Buy  30 sec   500</string>
    <string name="buy_lives">Buy  3 lives      500</string>
    <string name="next_level">Next level</string>
    <string name="not_enough_coins">You don\'t have enough coins</string>
    <string name="worlds">Worlds</string>
    <string name="animals">Animals</string>
    <string name="space">Space</string>
    <string name="Sea">Sea</string>
    <string name="open_now">Open now:</string>
    <string name="coming_soon">New Levels Coming Soon</string>
</resources>
