<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/fb_spoiler"
            android:text="@string/out_of_time"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/color1"
            android:layout_marginHorizontal="40dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginHorizontal="40dp"
            android:src="@drawable/alarmclock"
            android:scaleType="fitCenter"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/buy_time"
            android:textSize="24sp"
            android:textColor="#fff"
            android:fontFamily="@font/fb_spoiler"
            android:paddingEnd="20dp"
            android:drawableEnd="@drawable/coin_for_btn_5"
            android:background="@drawable/green_btn"
            android:layout_marginHorizontal="40dp"
            android:id="@+id/buyMoreTime"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/try_again"
            android:textSize="24sp"
            android:textColor="#fff"
            android:fontFamily="@font/fb_spoiler"
            android:background="@drawable/blue_btn"
            android:layout_marginHorizontal="40dp"
            android:id="@+id/outOfTimeTryAgain"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/home_page"
            android:fontFamily="@font/fb_spoiler"
            android:textSize="24sp"
            android:textColor="#fff"
            android:background="@drawable/blue_btn"
            android:layout_marginHorizontal="40dp"
            android:id="@+id/outOfTimeHome"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>