<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:background="@drawable/dialog_background">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/out_of_lives"
            android:gravity="center_horizontal"
            android:fontFamily="@font/fb_spoiler"
            android:textSize="30sp"
            android:textColor="@color/color1"
            android:layout_marginHorizontal="40dp"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:layout_marginHorizontal="40dp"
            android:src="@drawable/cryingheart"
            android:scaleType="fitCenter"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/buy_lives"
            android:textSize="24sp"
            android:fontFamily="@font/fb_spoiler"
            android:textColor="#fff"
            android:drawableEnd="@drawable/coin_for_btn_5"
            android:paddingEnd="20dp"
            android:background="@drawable/green_btn"
            android:layout_marginHorizontal="40dp"
            android:id="@+id/buyMoreLives"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/try_again"
            android:fontFamily="@font/fb_spoiler"
            android:textSize="24sp"
            android:textColor="#fff"
            android:background="@drawable/blue_btn"
            android:layout_marginHorizontal="40dp"
            android:id="@+id/outOfLivesTryAgain"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/home_page"
            android:fontFamily="@font/fb_spoiler"
            android:textSize="24sp"
            android:textColor="#fff"
            android:background="@drawable/blue_btn"
            android:layout_marginHorizontal="40dp"
            android:id="@+id/outOfLivesHome"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
</LinearLayout>